c4prj2_input/grade.txt
Grading at Sat Jul 20 17:35:57 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:24:7: error: implicit declaration of function ‘add_future_cards’ [-Werror=implicit-function-declaration]
       add_future_cards(fc, atoi(num), add_empty_cards(deck));
       ^
input.c:24:39: error: implicit declaration of function ‘add_empty_cards’ [-Werror=implicit-function-declaration]
       add_future_cards(fc, atoi(num), add_empty_cards(deck));
                                       ^
input.c:27:18: error: implicit declaration of function ‘card_from_letter’ [-Werror=implicit-function-declaration]
       card_t c = card_from_letter(str[i], str[i+1]);
                  ^
input.c:27:18: error: invalid initializer
input.c:34:5: error: implicit declaration of function ‘fprinft’ [-Werror=implicit-function-declaration]
     fprinft(stderr, "deck not successfully created");
     ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
